tablet layout bug fix

--- a/style/about.css
+++ b/style/about.css
@@ -35,7 +35,7 @@
 }
 
 /*media queries fot layout*/
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
     #up img{
         float: none;
         position: relative;
